packages/core-web/src/styles/markbind.css
blockquote {
    border-left: 0.25em solid #dfe2e5;
    color: #6a737d;
    padding: 0 1rem;
}

code {
    background: #f8f8f8;
    border-radius: 3px;
    padding: 0.2em 0.4em;
    word-break: normal;
}

mark code {
    background: #ffffffd4;
}

pre.hljs > code {
    background: none;
}

pre > code.hljs {
    -webkit-background-clip: padding-box; /* for Safari */
    background-clip: padding-box; /* for IE9+, Firefox 4+, Opera, Chrome */
    border-radius: 5px;
    counter-reset: line;
    width: 100%;
}

pre > code.hljs[heading] {
    border-top-right-radius: 0;
}

.code-block {
    position: relative;
}

.code-block-heading {
    border-radius: 6px 6px 0 0;
    float: right;
    font-size: 85%;
    line-height: 1;
    max-width: 85%;
    overflow-wrap: break-word;
    padding: 0.25em 0.4em;
    text-align: right;
}

.inline-markdown-heading {
    line-height: 1.5;
}

.code-block-content {
    clear: both;
    display: block;
}

/* switch to light style on print view */
@media print {
    pre > code.hljs,
    code.hljs.inline {
        background: ghostwhite;
        color: #333;
    }

    code.hljs.inline {
        border: 0.5px solid #d4d4d4;
    }

    code span.highlighted {
        background: lavender;
    }
}

kbd {
    background-color: #fafbfc;
    border: 1px solid #c6cbd1;
    border-bottom-color: #959da5;
    box-shadow: inset 0 -1px 0 #959da5;
    color: #444d56;
}

.btn:active,
.btn:focus {
    box-shadow: none !important;
    outline: none !important;
}

code.hljs.inline {
    display: initial;
    padding: 0.2em 0.4em;
}

.markbind-table {
    width: auto;
}

.radio-list-item,
.task-list-item {
    list-style-type: none;
    margin: 0 0 0 -1.2em;
}

.radio-list-item label {
    font-weight: inherit;
}

.table-striped > thead,
.table-striped > tbody > tr:nth-of-type(even) {
    background-color: #fff;
}

/**
  * Holy Grail Layout
  *
  * This section covers the common styles used within Header, Footer and Side Navigation bars
  */

/* Header */

header[fixed] {
    max-height: 100%;
    position: fixed;
    transition: max-height 0.6s ease-in;
    width: 100%;
    z-index: 1001;
}

header[fixed].hide-header {
    max-height: 0;
    transition: max-height 0.6s ease-out;
}

/* #app is treated as the main container */
#app {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

/* Footer */
footer {
    background-color: #f5f5f5;
    color: dimgrey;
    padding: 10px 0;
}

/* TODO move this back to markdown-it-attr if bundling is implemented */
.dimmed {
    color: #777;
}

.large {
    font-size: 125%;
}

.small {
    font-size: 80%;
}

.underline {
    text-decoration: underline;
}

/* Bootstrap small(sm) responsive breakpoint */
@media (max-width: 767.98px) {
    .dropdown-menu > li > a {
        white-space: normal;
    }

    .navbar-nav .open .dropdown-menu {
        background-color: #fff;
    }
}

/* Footnote anchor */

li.footnote-item:target {
    background-color: #eee;
}

.hljs:not(.inline) > span {
    display: block;
}

.hljs:not(.inline):not(.no-line-numbers) > span {
    padding: 0 0.5em 0 3.5em;
    position: relative;
}

/* display line numbers beside each span */
.hljs:not(.inline):not(.no-line-numbers) > span::before {
    border-right: 1px solid #ddd;
    display: inline-block;
    color: #888;
    content: counter(line);
    counter-increment: line;
    left: 0;
    margin-right: 0.5em;
    padding-right: 0.5em;
    position: absolute;
    text-align: right;
    top: 0;
    width: 3em;
    height: 100%;
}

/* hide popover, tooltip content */
[data-mb-slot-name] {
    display: none;
}

/* styles for triggers, popovers, tooltips */
.trigger {
    border-bottom: 1px dotted currentColor;
}

.trigger-click {
    cursor: pointer;
    border-bottom: 1px dashed currentColor;
}

.trigger-click:focus {
    outline: none;
}

.modal.mb-zoom {
    -webkit-transform: scale(0.1);
    -moz-transform: scale(0.1);
    -ms-transform: scale(0.1);
    transform: scale(0.1);
    opacity: 0;
    -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
    transition: all 0.3s;
}

.modal.mb-zoom.show {
    -webkit-transform: scale(1);
    -moz-transform: scale(1);
    -ms-transform: scale(1);
    transform: scale(1);
    opacity: 1;
}

/* "Copy" and "wrap text" code block buttons */
pre {
    position: relative;
    display: flex;
}

.function-btn-container {
    display: grid;
    height: max-content;
}

button.function-btn {
    border: none;
    background-color: transparent;
    color: darkgray;
    cursor: pointer;
    display: inline-block;
    padding: 0.35rem;
    text-align: center;
    white-space: nowrap;
}

.function-btn:hover {
    transition: all 0.5s ease;
    color: gray;
}

.function-btn-body {
    align-items: center;
    display: flex;
}

.function-btn svg {
    fill: currentColor;
}

/* Wrap class used for "wrap text" button. */
code.wrap {
    white-space: pre-wrap;
    word-wrap: break-word;
}

/* Octicon sizing */
.octicon {
    height: 1em;
    width: 1em;
}

ol,
ul {
    padding-left: 1.5rem;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    margin-bottom: 1rem;
}

